--- a/exam-final/pom.xml
+++ b/exam-final/pom.xml
@@ -69,6 +69,13 @@
 		    <artifactId>webjars-locator</artifactId>
 		    <version>0.52</version>
 		</dependency>
+		
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-bootstarter-validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
